added 2nd and 3rd blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First github repo </title>
+    <link rel="stylesheet" href="./styles/blog.css">
 </head>
 <body>
+
+    <div class="blog">
+        Hello World
+    </div>
+
+    <div class="blog">
+        Hello World
+    </div>
+
+    <div class="blog">
+        Hello World
+    </div>
     
 </body>
 </html>
