--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <div class="blog">
         Hello World
     </div>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m"message"</li>
+        <li>git push</li>
+    </ul>
     
 </body>
 </html>
